// protoc --go_out=plugins=grpc:. *.proto

syntax = "proto3";

//package name
package m.highscore.v1;

//name of the go package
option go_package = "game";

//define the service or APIs
service Game{
    rpc SetHighScore(SetHighScoreRequest) returns (SetHighScoreResponse);
    rpc GetHighScore(GetHighScoreRequest) returns (GetHighScoreResponse);
}

//message to define what above functions are
message SetHighScoreRequest {
    double high_score = 1; //backward compatible
}

message SetHighScoreResponse {
    bool set = 1;
}

message GetHighScoreRequest {

}

message GetHighScoreResponse {
    double high_score = 1;
}